index.css
:root{
    background: black;
    /* background: #1a2833; */
    /* --background-color: #1a2833; */
}
/* Intro Screen */

/* 
body {
    /* overflow-y: hidden;  Disabling this because its too wonky right now*
    /* index.js sets this back to auto *

    Instead of doing this, I should see if I can make the intro screen longer than the entire web page itself so you can just allow scrolling, but no matter
    how far down you scroll its long enough to cover evberything
} 
*/

#intro-screen-title {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    transition: 1s opacity;
}

#intro-screen {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: #000000;
    overflow-y: hidden; /* Supposed to keep loading screen from being scrollable, but isn't working. It seems it works by adding this to body element */
	opacity: 1;
    transition: 1s opacity;
}

.fade-out{
    opacity: 0;
}
#intro-screen.fade-out {
    opacity: 0;
}

/* End Intro Screen CSS */

p{
    color:rgb(201, 207, 212);
}

.miscgrid{
    display: grid;
    grid-template-columns: 5em;
    grid-template-rows: auto auto auto;
    column-gap: 10px;
    row-gap: 10px;
    padding-right: 10px; /* This is done because <main>'s class is weird and doesn't contain it properly in mobile */
}

.mygrid {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: auto;
}

#resume{
    grid-column-start: 1;
    grid-column-end: 1;
    grid-row-start: 1;
    grid-row-end: 1;
    width: 75%;
}

#portfolio{
    grid-column-start: 2;
    grid-column-end: 2;
    grid-row-start: 1;
    grid-row-end: 1;
    width: 75%;
}

/*    SVG Animation   */

#Contents { opacity: 0; }
#SVGDocument:hover #Contents {
    opacity: 1;
    transition-duration: 1000ms;
}

#Star   {opacity: 0;}
#Star_2 { opacity: 0;}
#Star_3 { opacity: 0;}
#Star_4 { opacity: 0;}
#Star_5 { opacity: 0;}
#Star_6 { opacity: 0;}
#Star_7 { opacity: 0;}
#Star_8 { opacity: 0;}
#Star_9 { opacity: 0;}
#SVGUniverse:active #Star {
    opacity: 1;
    transition-delay: 100ms;
    transition-duration: 1000ms;
}
#SVGUniverse:hover #Star_2 {
    opacity: 1;
    transition-delay: 290ms;
    transition-duration: 1000ms;
}
#SVGUniverse:hover #Star_3 {
    opacity: 1;
    transition-delay: 20ms;
    transition-duration: 1000ms;
}
#SVGUniverse:hover #Star_4 {
    opacity: 1;
    transition-delay: 160ms;
    transition-duration: 1000ms;
}
#SVGUniverse:hover #Star_5 {
    opacity: 1;
    transition-delay: 500ms;
    transition-duration: 1000ms;
}
#SVGUniverse:hover #Star_6 {
    opacity: 1;
    transition-delay: 135ms;
    transition-duration: 1000ms;
}
#SVGUniverse:hover #Star_7 {
    opacity: 1;
    transition-delay: 240ms;
    transition-duration: 1000ms;
}
#SVGUniverse:hover #Star_8 {
    opacity: 1;
    transition-delay: 390ms;
    transition-duration: 1000ms;
}
#SVGUniverse:hover #Star_9 {
    opacity: 1;
    transition-delay: 70ms;
    transition-duration: 1000ms;
}

/* End SVG Animation  */

#footer {
    font-size: .85vw;
    text-align: center;
    width: 100%;
}

/* Target mobile platforms */
/* @media screen and (max-width: 320px){
    svg{
        width: 20%;
    }
} */

.noselect { /* Don't allow people to highlight this element */
    -webkit-touch-callout: none; /* iOS Safari */
      -webkit-user-select: none; /* Safari */
       -khtml-user-select: none; /* Konqueror HTML */
         -moz-user-select: none; /* Old versions of Firefox */
          -ms-user-select: none; /* Internet Explorer/Edge */
              user-select: none; /* Non-prefixed version, currently
                                    supported by Chrome, Edge, Opera and Firefox */
  }
.noscroll {
    -ms-overflow-style: none;  /* Hide scroll bar on Internet Explorer 10+ */
    scrollbar-width: none;  /* Hide scroll bar on Firefox */
}
.noscroll::-webkit-scrollbar { 
    display: none;  /* Hide scroll bar on Safari and Chrome */
    width: 0;
    height: 0;
}

